// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Teste para o componente Header Deve renderizar corretamente na versão Home 1`] = `
<DocumentFragment>
  <header
    class="sc-gJhJfT dVEvEw"
  >
    <div
      class="sc-brayMQ eJGJjM"
    >
      <img
        alt="efood"
        class="sc-dsLRjI jmYjkT"
        src="test-file-stub"
      />
      <h1
        class="sc-fQpSrZ hHTntV"
      >
        Viva experiências gastronômicas no conforto da sua casa
      </h1>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Teste para o componente Header Deve renderizar corretamente na versão Profile 1`] = `
<DocumentFragment>
  <header
    class="sc-gJhJfT bMOlNb"
  >
    <div
      class="sc-brayMQ eJGJjM"
    >
      <div
        class="sc-elDHXC bdOLdp"
      >
        <a
          data-discover="true"
          href="/"
        >
          Restaurantes
        </a>
        <img
          alt="efood"
          class="sc-dsLRjI jmYjkT"
          src="test-file-stub"
        />
        <span>
          0 produto(s) no carrinho
        </span>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
